[gd_scene load_steps=12 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://addons/versatile_atlas/bottom_panel.gd" type="Script" id=2]
[ext_resource path="res://addons/versatile_atlas/inside.gd" type="Script" id=3]
[ext_resource path="res://addons/versatile_atlas/selected_area.gd" type="Script" id=4]
[ext_resource path="res://addons/versatile_atlas/ZoomLess.svg" type="Texture" id=5]
[ext_resource path="res://addons/versatile_atlas/ZoomReset.svg" type="Texture" id=6]
[ext_resource path="res://addons/versatile_atlas/ZoomMore.svg" type="Texture" id=7]
[ext_resource path="res://addons/versatile_atlas/draw_grid.gd" type="Script" id=8]

[sub_resource type="InputEventKey" id=3]
pressed = true
scancode = 16777221
physical_scancode = 16777221

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.909804, 0.611765, 0.509804, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[node name="BottomPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 200 )
script = ExtResource( 2 )

[node name="HasTex" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0

[node name="Above" type="HBoxContainer" parent="HasTex"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="Apply" type="Button" parent="HasTex/Above"]
margin_right = 48.0
margin_bottom = 24.0
shortcut = SubResource( 2 )
text = "Apply"

[node name="Label" type="Label" parent="HasTex/Above"]
margin_left = 52.0
margin_top = 5.0
margin_right = 141.0
margin_bottom = 19.0
text = "Snap settings:"

[node name="Step" type="VSeparator" parent="HasTex/Above"]
margin_left = 145.0
margin_right = 149.0
margin_bottom = 24.0

[node name="Step2" type="Label" parent="HasTex/Above"]
margin_left = 153.0
margin_top = 5.0
margin_right = 185.0
margin_bottom = 19.0
text = "Step:"

[node name="StepX" type="SpinBox" parent="HasTex/Above"]
margin_left = 189.0
margin_right = 263.0
margin_bottom = 24.0
min_value = 1.0
max_value = 256.0
value = 1.0
allow_greater = true
suffix = "px"

[node name="StepY" type="SpinBox" parent="HasTex/Above"]
margin_left = 267.0
margin_right = 341.0
margin_bottom = 24.0
min_value = 1.0
max_value = 256.0
value = 1.0
allow_greater = true
suffix = "px"

[node name="Offset" type="VSeparator" parent="HasTex/Above"]
margin_left = 345.0
margin_right = 349.0
margin_bottom = 24.0

[node name="Offset2" type="Label" parent="HasTex/Above"]
margin_left = 353.0
margin_top = 5.0
margin_right = 396.0
margin_bottom = 19.0
text = "Offset:"

[node name="OffsetX" type="SpinBox" parent="HasTex/Above"]
margin_left = 400.0
margin_right = 474.0
margin_bottom = 24.0
min_value = -256.0
max_value = 256.0
allow_greater = true
allow_lesser = true
suffix = "px"

[node name="OffsetY" type="SpinBox" parent="HasTex/Above"]
margin_left = 478.0
margin_right = 552.0
margin_bottom = 24.0
min_value = -256.0
max_value = 256.0
allow_greater = true
allow_lesser = true
suffix = "px"

[node name="Button" type="Button" parent="HasTex/Above"]
margin_left = 977.0
margin_right = 1024.0
margin_bottom = 24.0
hint_tooltip = "Since I couldn't find a way to auto-close this control, you can close it here."
size_flags_horizontal = 10
text = "Close"

[node name="Below" type="Panel" parent="HasTex"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 600.0
rect_clip_content = true
size_flags_vertical = 3

[node name="Inside" type="Control" parent="HasTex/Below"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="HasTex/Below/Inside"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="SelectedArea" type="Panel" parent="HasTex/Below/Inside"]
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="DrawGrid" type="Control" parent="HasTex/Below"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Zoom" type="Control" parent="HasTex/Below"]
margin_left = 8.0
margin_top = 8.0
margin_right = 104.0
margin_bottom = 40.0

[node name="Less" type="ToolButton" parent="HasTex/Below/Zoom"]
margin_right = 32.0
margin_bottom = 32.0
icon = ExtResource( 5 )
icon_align = 1

[node name="One" type="ToolButton" parent="HasTex/Below/Zoom"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 32.0
icon = ExtResource( 6 )
icon_align = 1

[node name="More" type="ToolButton" parent="HasTex/Below/Zoom"]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 32.0
icon = ExtResource( 7 )
icon_align = 1

[node name="HScrollBar" type="HScrollBar" parent="HasTex/Below"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -12.0
margin_right = -12.0
max_value = 1200.0
page = 1000.0

[node name="VScrollBar" type="VScrollBar" parent="HasTex/Below"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
margin_bottom = -12.0
max_value = 1200.0
page = 1000.0

[connection signal="resized" from="." to="." method="_on_BottomPanel_resized"]
[connection signal="visibility_changed" from="." to="." method="_on_BottomPanel_visibility_changed"]
[connection signal="zoom_changed" from="." to="." method="_on_BottomPanel_zoom_changed"]
[connection signal="zoom_changed" from="." to="HasTex/Below/Inside" method="_on_BottomPanel_zoom_changed"]
[connection signal="pressed" from="HasTex/Above/Apply" to="." method="_on_Apply_pressed"]
[connection signal="value_changed" from="HasTex/Above/StepX" to="." method="_on_StepX_value_changed"]
[connection signal="value_changed" from="HasTex/Above/StepY" to="." method="_on_StepY_value_changed"]
[connection signal="value_changed" from="HasTex/Above/OffsetX" to="." method="_on_OffsetX_value_changed"]
[connection signal="value_changed" from="HasTex/Above/OffsetY" to="." method="_on_OffsetY_value_changed"]
[connection signal="pressed" from="HasTex/Above/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HasTex/Below/Zoom/Less" to="." method="_on_Less_pressed"]
[connection signal="pressed" from="HasTex/Below/Zoom/One" to="." method="_on_One_pressed"]
[connection signal="pressed" from="HasTex/Below/Zoom/More" to="." method="_on_More_pressed"]
[connection signal="scrolling" from="HasTex/Below/HScrollBar" to="." method="_on_general_scroll"]
[connection signal="scrolling" from="HasTex/Below/VScrollBar" to="." method="_on_general_scroll"]
